--- a/assets/css/joinplayer.css
+++ b/assets/css/joinplayer.css
@@ -139,7 +139,7 @@ input[type="number"]::placeholder {
 }
 /* button */
 /* container */
-@media screen and (max-width:900px) {
+@media screen and (max-width:450px) {
     * {
         margin: 0px;
         padding: 0px;
@@ -284,3 +284,49 @@ input[type="number"]::placeholder {
     /* container */
     
 }
+@media all and (min-width:750px) and (max-width:1024px) {
+       .forms {
+        position: relative;
+        top: 2%;
+        border: 2px solid rgb(180, 176, 176);
+        width: 85%;
+        left: 6%;
+        border-radius: 2%;
+        box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
+        height: 97%;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+        .profile {
+        font-size: medium;
+        padding: 9px 38px;
+        color: rgb(20, 14, 14);
+        font-weight: bold;
+        cursor: pointer;
+        border: none;
+        margin-bottom: 5px;
+        position: relative;
+        top: 30px;
+        left: 260px;
+        box-shadow: 0 3px 10px rgb(3, 10, 87);
+        background-color: rgb(16, 161, 16);
+        border-radius: 10px;
+    }
+}
+@media all and (min-width:1024px) and (max-width:1200px){
+            .profile {
+        font-size: medium;
+        padding: 9px 38px;
+        color: rgb(20, 14, 14);
+        font-weight: bold;
+        cursor: pointer;
+        border: none;
+        margin-bottom: 5px;
+        position: relative;
+        top: 30px;
+        left: 390px;
+        box-shadow: 0 3px 10px rgb(3, 10, 87);
+        background-color: rgb(16, 161, 16);
+        border-radius: 10px;
+    }
+}
+     
