--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -122,7 +122,7 @@ input[type="password"]::placeholder {
 
 }
 /* new signup */
-@media screen and (max-width:900px) {
+@media screen and (max-width:450px) {
     * {
         margin: 0px;
         padding: 0px;
@@ -248,4 +248,20 @@ input[type="password"]::placeholder {
     }
     /* new signup */
    
+}
+@media all and (min-width:750px) and (max-width:1024px) {
+     
+ 
+    .forms {
+        position: relative;
+        top: 29%;
+        border: 2px solid rgb(180, 176, 176);
+        width: 60%;
+        left: 17%;
+        border-radius: 2%;
+        box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
+        height: 60%;
+        background-color: rgba(0, 0, 0, 0.3);
+    
+    }
 }
