--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -651,7 +651,7 @@ a {
     /* header */
     header {
         height: 10vh;
-    
+    width: 450px;
         background-position: center;
         background-size: cover;
         background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
