--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -647,11 +647,13 @@ a {
         padding: 0px;
     }
  
-    
+    body,html{
+        overflow-x: hidden;
+    }
     /* header */
     header {
         height: 10vh;
-    width: 450px;
+    width: 425px;
         background-position: center;
         background-size: cover;
         background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
@@ -689,6 +691,7 @@ a {
         background-color: #d0dae3;
         top: 50px;
         width: 90px;
+        text-align: center;
     
     }
     
@@ -708,10 +711,10 @@ a {
        }
     
     .login {
-        font-size: medium;
-        padding: 2px 17px;
+        font-size: 13px;
+        padding: 0px 15px;
         height: 102%;
-        width: 100%;
+        width: 80%;
         background-color: #ffffff;
         color: rgb(0, 0, 0);
         font-weight: bold;
