--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,10 +477,10 @@ a {
    left: 60%;
     }
     .login {
-        font-size: small;
-        padding: 1px 12px;
+        font-size:12px;
+        padding: 0px 2px;
         height: 87%;
-        width: 100%;
+        width: 70%;
         background-color: #ffffff;
         color: rgb(0, 0, 0);
         font-weight: bold;
