--- a/assets/css/bookground.css
+++ b/assets/css/bookground.css
@@ -204,7 +204,7 @@ input[type="search"]::placeholder {
 
 .main2 {
 
-    height: 290vh;
+    height: 310vh;
     /* overflow: hidden; */
     color: white;
     border: 20px solid;
@@ -227,8 +227,8 @@ input[type="search"]::placeholder {
     border-radius: 4%;
     box-shadow: 0 3px 10px rgb(3, 10, 87);
     margin-left: 13%;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     align-items: center;
     cursor: pointer;
     background-color: white;
@@ -275,11 +275,12 @@ input[type="search"]::placeholder {
 
 .symbol {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     flex-direction: row;
+    /* justify-content: flex-start; */
     position: relative;
-    right: 33%;
-    bottom: 2%;
+    left: 3%;
+    top: 5%;
     align-content: space-around;
     align-items: flex-end;
 
@@ -289,23 +290,25 @@ input[type="search"]::placeholder {
     display: flex;
     justify-content: space-around;
     position: relative;
-    left: 38%;
-    bottom: 8%;
+    left: 15%;
+    bottom: 5px;
 
 }
 /* book button */
 .book {
     font-size: medium;
     padding: 5px 15px;
-    height: 100%;
-    width: 100%;
+    height: 8%;
+    width: 47%;
     background-color: rgb(5, 120, 105);
     color: white;
     font-weight: bold;
     cursor: pointer;
     border: none;
     position: relative;
-    top: 180%;
+    left: 26%;
+    top:2%;
+   
     border-radius: 10%;
 
 }
@@ -314,7 +317,7 @@ input[type="search"]::placeholder {
     color: rgb(255, 183, 0);
     font-size: 17px;
     position: relative;
-    right: 10px;
+    left: 150px;
 
 }
 
