--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -20,14 +20,33 @@
 
 .forms {
     position: relative;
-    top: 20%;
+    top: 15%;
     border: 2px solid rgb(180, 176, 176);
     width: 30%;
     left: 35%;
     border-radius: 2%;
     box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
-    height: 70%;
+    height: 82%;
     background-color: rgba(0, 0, 0, 0.3);
+}
+.boxform{
+    display: flex;
+    padding: 2px;
+}
+.boxform i{
+    position: relative;
+    right: 42px;
+    top:10px;
+    padding: 2px 2px;
+    visibility: hidden;
+}
+.boxform.success i.fa-circle-check{
+    color: green;
+    visibility: visible;
+}
+.boxform.error i.fa-circle-exclamation{
+    color: red;
+    visibility: visible;
 }
 /* form container */
 
@@ -40,19 +59,19 @@ h1.signuphead {
 
 }
 
-#name1 {
+#name1,#name2 {
     width: 80%;
     height: 45px;
     border-radius: 5px;
-    border: none;
-
+    /* border: none;
+    outline-color: gray; */
 }
 #email {
     width: 80%;
     height: 45px;
     border-radius: 5px;
-    border: none;
-
+    /* border: none;
+    outline-color: gray; */
 }
 
 
@@ -60,14 +79,16 @@ h1.signuphead {
     width: 80%;
     height: 45px;
     border-radius: 5px;
-    border: none;
+    /* border: none;
+    outline-color: gray; */
 }
 
 #password {
     width: 80%;
     height: 45px;
     border-radius: 5px;
-    border: none;
+    /* border: none;
+    outline-color: gray; */
 
 }
 
@@ -127,6 +148,49 @@ input[type="text"]::placeholder {
 label {
     color: white;
 
+}
+/* .boxform.success input {
+    border-color: rgb(30, 248, 30);
+}
+.boxform.error input{
+    border-color: rgb(188, 41, 0);
+} */
+/* input:valid,
+select:valid{
+    border: 2px solid green;
+}
+input:invalid,
+select:invalid{
+    border: 2px solid red;
+} */
+
+input:invalid{
+    /* background-color:  green; */
+    /* border-color: rgb(13, 255, 13); */
+    background-color: rgb(255, 255, 255);
+    border: none;
+    outline: 2px solid rgb(255, 44, 44);
+    border-radius: 5px;
+    animation: shake 0.2s 2;
+}
+ @keyframes shake {
+    25%{
+        translate: 6px 0;
+    }
+    50%{
+        translate: -6px 0;
+    }
+    75%{
+        translate: 6px 0;
+    }
+ }
+input:valid,select:valid{
+    /* border-color: rgb(128, 0, 0); */
+    background-color: rgb(255, 255, 255);
+    border: none;
+    outline: 2px solid rgb(17, 255, 0);
+    border-radius: 5px;
+  
 }
 /* label color */
 
