--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -129,7 +129,6 @@ ul li a:hover {
     background-color:white;
     color: white;
     margin: 10px 10px;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -263,14 +262,14 @@ left: 90px;
 
 /* sidebar2 */
 .container {
-    background-color: rgba(15, 67, 209, 0.82);
+    background-color: rgba(233, 235, 241, 0.82);
     width: 390px;
-    height: 50vh;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     margin-bottom: 20%;
-    border-radius: px;
-    border: 1px solid black;
+    border-radius: 10px;
+    border: 1px solid none;
     box-shadow: 0 3px 10px rgb(0, 0, 0);
     position: relative;
     bottom: 50px;
@@ -278,9 +277,15 @@ left: 90px;
 
 .top {
     color: rgb(0, 0, 0);
-    padding: 2%;
+    padding: 1%;
+    /* background-color: rgba(148, 170, 236, 0.82); */
 }
-
+.h2head{
+    background-color: #0A66C2;
+    padding: 10px 30px;
+    border-radius: 10px;
+    width: 320px;
+}
 .messagebox{
     flex: 1;
     color: rgb(0, 0, 0);
@@ -317,29 +322,40 @@ left: 90px;
 
 .bottom form {
     display: flex;
-    background-color: rgba(229, 233, 236, 0.952);
-
+    background-color: rgba(147, 147, 147, 0.952);
+     height: 50px;
+     border-radius: 10px;
 }
 
 form input {
-    width: 320px;
-    height: 27px;
+    width: 330px;
+    height: 37px;
     border: 1px solid black;
     padding-left: 7px;
     outline: none;
-    border-radius: 0px;
+    border-radius: 20px;
+    position: relative;
+    top: 5px;
+    left: 5px;
 
 }
 
 form button {
-    width: 16%;
-    background-color: rgb(27, 238, 146);
+    background-color: rgba(147, 147, 147, 0.952);
+    height: 10px;
     font-size: medium;
     border: none;
     outline: none;
     border-radius: 0px;
+    font-size: 25px;
+    position: relative;
+    left: 12px;
+    top: 10px;
 }
-
+.noti{
+    position: relative;
+    top: 10px;
+}
 
 
 .rightarrow {
@@ -411,6 +427,7 @@ p a {
 a {
     text-decoration: none;
 }
+
 
 /* footer section */
 @media screen and (max-width:450px){
