--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -319,10 +319,8 @@ ul li a:hover {
 
 
 .rules {
-    width: 590px;
-
+    width:600px;
     border: 2px solid black;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -336,6 +334,17 @@ ul li a:hover {
     border-radius: 4%;
     box-shadow: 0 3px 10px rgb(0, 0, 0);
     line-height: 1.6;
+
+}
+.rules p{
+ /* display: inline-block;
+    flex-direction: column; */
+line-height: 30px;
+/* text-align: center; */
+ /* width: 300px; */
+word-break: break-all;
+/* white-space: pre-wrap; */
+
 
 }
 
@@ -415,7 +424,12 @@ ul li a:hover {
 }
 
 
-
+.edit{
+    position: relative;
+    left: 1300px;
+    bottom: 820px;
+    width: 70px;
+}
 
 
 
