fix: of login page code

--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -1,6 +1,14 @@
 * {
     margin: 0px;
     padding: 0px;
+   
+}
+
+body{
+
+
+    overflow-y: hidden;
+  
 }
 /* form container */
 #container {
@@ -8,6 +16,7 @@
     height: 100vh;
     background-position: center;
     background-size: cover;
+  
 }
 
 .forms h1,form {
@@ -19,14 +28,17 @@
 }
 
 .forms {
+  
     position: relative;
-    top: 15%;
+    top: 10%;
     border: 2px solid rgb(180, 176, 176);
     width: 30%;
-    left: 35%;
+    margin-left: 500px;
+  
+    /* left: 35%; */
     border-radius: 2%;
     box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
-    height: 82%;
+    height: 85%;
     background-color: rgba(0, 0, 0, 0.3);
 }
 .boxform{
@@ -117,7 +129,7 @@ input[type="text"]::placeholder {
 
 #newlogin {
     padding: 0px 50px;
-    width: 43%;
+    width: 13%;
     height: 45px;
     font-size: large;
     font-weight: bolder;
@@ -125,7 +137,8 @@ input[type="text"]::placeholder {
     background-color: rgb(7, 86, 46);
     color: white;
     position: relative;
-    left: 20%;
+    left: 43%;
+    bottom: 102px;
     border-radius: 10px;
     border: none;
     box-shadow: 0 3px 10px rgb(35, 34, 34);
@@ -163,6 +176,19 @@ input:invalid,
 select:invalid{
     border: 2px solid red;
 } */
+.joinplayer{
+    font-size: larger;
+  position: relative;
+  left: 150px;
+  outline: none;
+   
+}
+#checkjoinplayer{
+    position: relative;
+    right: 20px;
+    outline: 0px solid rgb(255, 255, 255);
+}
+
 
 input:invalid{
     /* background-color:  green; */
@@ -193,6 +219,147 @@ input:valid,select:valid{
   
 }
 /* label color */
+
+
+
+
+
+/* join player */
+
+
+
+.labelname {
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    color: #fbfbfb;
+
+
+}
+
+#name {
+    width: 50%;
+    height: 35px;
+    border-radius: 5px;
+    border: none;
+    border: 1px solid black;
+position: relative;
+left: 95px;
+
+}
+
+#age {
+    width: 50%;
+    height: 35px;
+    border-radius: 5px;
+    border: 1px solid black;
+    position: relative;
+left: 95px;
+
+}
+#sportss {
+    width: 50%;
+    height: 35px;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 5px;
+}
+#gender{
+    width: 50%;
+    height: 35px;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 5px;
+}
+
+
+
+.select {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+#timingsfrom,#timingsto{
+    width: 50%;
+    height: 35px;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 5px;
+
+
+
+}
+#locationselect{
+    width: 50%;
+    height: 35px;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 5px;
+
+}
+
+
+.checkboxsentence {
+    color: white;
+
+}
+
+.checkboxcolumn {
+    display: flex;
+    justify-content: center;
+
+}
+
+
+
+input[type="name"]::placeholder {
+    padding-left: 5%;
+}
+
+input[type="number"]::placeholder {
+    padding-left: 5%;
+}
+/* forms content */
+
+/* button */
+.profile {
+    font-size: medium;
+    padding: 9px 38px;
+    color: rgb(20, 14, 14);
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    margin-bottom: 5px;
+    position: relative;
+    top: 30px;
+    left: 200px;
+    box-shadow: 0 3px 10px rgb(3, 10, 87);
+    background-color: rgb(16, 161, 16);
+    border-radius: 10px;
+}
+.profile:hover{
+    background-color: rgb(18, 230, 18);
+
+}
+
+
+.joinplayercontainer{
+
+
+    position: relative;
+    bottom: 630px;
+    border: 2px solid rgb(180, 176, 176);
+    width: 25%;
+    /* left: 72%; */
+    border-radius: 2%;
+    box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
+    height: 715px;
+    background-color: rgba(0, 0, 0, 0.3);
+    display:none ;
+
+}
 
 
 /* forms signin */
