--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -91,8 +91,12 @@ h1.signuphead {
     width: 80%;
     height: 45px;
     border-radius: 5px;
+  
     /* border: none;
     outline-color: gray; */
+}
+#user_phoneno::-webkit-inner-spin-button{
+    -webkit-appearance: none;
 }
 
 #password {
@@ -259,6 +263,10 @@ left: 95px;
     position: relative;
 left: 95px;
 
+}
+
+#age::-webkit-inner-spin-button{
+    -webkit-appearance: none;
 }
 #sportss {
     width: 50%;
